# neural_net

./: Cargo.toml  README.md  data
src/: main.rs
src/logic/: network.rs
