[package]
name = "neural_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
ndarray = "0.15.5"
ndarray-rand = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
imageproc = "0.23.0"